httpserver/depoyment/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
spec:
  selector:
    matchLabels:
      app: httpserver
  replicas: 2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: httpserver
    spec:
      volumes:
        - name: http-config
          configMap:
            name: http-server
      imagePullSecrets:
        - name: regcred
      containers:
        - name: httpserver
          imagePullPolicy: Always
          image: registry.cn-hangzhou.aliyuncs.com/zdbc/httpserver:v1.2
          ports:
            - containerPort: 9090
          volumeMounts:
            - mountPath: /etc/conf
              name: http-config

          resources:
            requests:
              memory: 256Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: "2"
              
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 3
            periodSeconds: 3
