httpserver/depoyment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
name: httpserver-ingress
annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: httpserver-service
              port: 
                number: 80
